test: use WireMock for mocking HTTP calls in tests